Show event information in a better looking fashion

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <script
+      src="https://kit.fontawesome.com/41ab393967.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
